--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,14 +17,24 @@
     border: none;
     border-radius: 5px;
     font-size: 20px;
-   
-
+}
+.dark-3{
+    color: rgb(117, 117, 117);
 }
 .dark-2{
     color: #474747;
 }
+.dark-1{
+    color: #181818;
+}
 .text-primary{
     color: #FD6E0A
+}
+/* Header */
+.header{
+    background-image: url('../images/developer.png'),url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
 }
 
 /* Navigation Bar Styles*/
@@ -50,4 +60,28 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     font-size: 20px;
+}
+/* Banner Descriptions */
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin:0 35px 0 200px;
+}
+.banner-grettings{
+    font-size: 45px;
+    font-weight: 600px;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: bold;
+}
+.banner-descriptions{
+    font-size: 18px;
+    font-weight: 400;
+}
+.banner-image{
+    width: 584px;
+}
+.banner-content{
+    max-width: 580px;
 }
